<resources>
    <string name="app_name">Ceylinco Customer App</string>
    <!--<string name="app_name">Test</string>-->
    <string name="no_network_error">No internet connection.Please check your connection.</string>
    <string name="location_permission_denied">This requires location permission to enable your location services..</string>
    <string name="permission_required_toast">Location permission is required.</string>
    <string name="permission_rationale_location">Access to the location services is required.</string>
    <string name="server_key">AIzaSyButHF3_gy4QWL6lQMDvbT3xEc3PZ82kZ8</string>
    <string name="shared_pref_key">CEYLINCOSHAREDPREF</string>

    <!-- Select option screen -->
    <string name="option_menu_message">Select an Option</string>
    <string name="option_new_insurance">New insurance</string>
    <string name="option_existing_policy">Existing policy</string>
    <string name="option_inquiries">Inquiries</string>
    <string name="option_screen_message_text">Comprehensive vehicle insurance cover from the market leader</string>
    

    <!-- New Insurance - Vehicle List -->
    <string name="new_insurance_vehicle_list_title">New Insurance - Vehicle List</string>
    <string name="vehicle_car">Car</string>
    <string name="vehicle_van">Van</string>
    <string name="vehicle_bus">Bus</string>
    <string name="vehicle_lorry">Lorry</string>
    <string name="vehicle_bike">Bike</string>
    <string name="vehicle_three_wheeler">Three Wheeler</string>
    <string name="vehicle_jeep">Jeep</string>
    <string name="vehicle_double_cab">Double cab</string>
    

    <!-- Types of insurance -->
    <string name="insurance_types_title">Types of Insurance</string>
    <string name="payment_mode">Third Party</string>
    <string name="comprehensive">Comprehensive</string>
    

    <!-- Registration - Payment mode & Comprehensive -->
    <string name="registration_title">Registration</string>
    <string name="select_registration_type">Select a Registration Type</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="company_name">Name/Company Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="business_reg_no">ID/PP/Business Reg. No</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="engine_number">Engine Number</string>
    <string name="text_next">Next</string>
    
    <string name="value_of_vehicle">Value of Vehicle</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year_of_make">Year of Make</string>
    <string name="leasing_company">Leasing Company</string>
    <string name="purpose_of_user">Purpose of Use</string>
    <string name="present_meter_reading">Present Meter Reading</string>
    <string name="purchase_price">Purchase Price</string>

    <string name="additional_covers">Additional Covers</string>
    <string name="flood_cover">Flood cover and natural perils</string>
    <string name="date_of_first_registration">Date of First Registration</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="riot_cover">RIOT cover</string>
    <string name="no_claim_bonus">No claim bonus</string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="preferred_branch">Preferred Branch</string>
    <string name="location">Location</string>

    <string name="required_veh_no">Vehicle number required</string>
    <string name="required_name">Name required</string>
    <string name="required_contact">Contact number required</string>
    <string name="required_email">Email required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="required_address">Address required</string>
    <string name="required_nic">ID/PP/Business Reg. No required</string>
    <string name="required_chasis">Chasis number required</string>
    <string name="required_eno">Engine number required</string>
    <string name="required_branch">Branch required</string>
    <string name="required_location">Location required</string>
    <string name="required_val_of_vehicle">Value of vehicle required</string>
    <string name="required_policy_no">Policy No required</string>
    <string name="invalid_con_password">Invalid confirm password</string>

    <string-array name="reg_types">
        <item>Registered</item>
        <item>Unregistered</item>
    </string-array>

    <!-- Existing policy - Login -->
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="policy_number">Policy Number</string>
    <string name="select_vehicle_title">Select Vehicle</string>
    <string name="required_username">User name required</string>
    <string name="required_password">Password required</string>


    <!-- Selected Vehicle Policy -->
    <string name="status_of_claims">Status of Claims</string>
    <string name="policy_details">Policy Details</string>
    <string name="vvip_accident_details">VVIP Accident Details</string>
    <string name="max_images_capturing">You can capture maximum of 10 images</string>
    <string name="max_images_upload">You can select only 5 images to upload</string>
    
    
    <!-- Inquiries -->
    <string name="police_stations">Police Stations</string>
    <string name="hospitals">Hospitals</string>
    <string name="banks">Banks</string>
    <string name="call_us">Call Us</string>
    <string name="branch_locator">Branch Locator</string>
    <string name="location_services">Location Services</string>
    <string name="hotline">Hotline</string>
    <string name="head_office">Head Office</string>
    <string name="vip_center">VIP Center</string>
    <string name="add_new_photo">Add new photo</string>
    <string name="upload_photo">Upload</string>
    <string name="report_accident">Report an accident</string>


    <!-- Status of Claims -->
    <string name="claims_status_title">Status List</string>
    
    
    <!-- Policy Details -->
    <string name="renew_policy">Please renew my policy</string>
    <string name="contact_branch">For more details contact the branch 07754589652</string>

    <!-- User Registation -->
    <string name="user_reg_name">Name</string>
    <string name="user_reg_nic">NIC</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="user_reg_title">User Registration</string>

    <!-- Application URLs -->
    <string name="base_url">http://202.124.181.76/cusapp_webservice/</string>
    <string name="vehicle_make_model">get_vehicle_params.aspx</string>
    <string name="third_party_submit_url">submit_form_data_thirdparty.aspx</string>
    <string name="comprehensive_submit_url">submit_form_data_comprehensive.aspx</string>
    <string name="login_url">login.aspx</string>
    <string name="get_user_policies_url">get_user_policies.aspx</string>
    <string name="get_claims_url">get_claims.aspx</string>
    <string name="get_single_claim_url">get_claim_data.aspx</string>
    <string name="get_policy_details_url">get_policy_data.aspx</string>
    <string name="forgot_password_details_url">user_forgot_password_submit.aspx</string>
    <string name="get_perils_url">get_product_perils.aspx</string>
    <string name="create_user_url">user_registration_form_submit.aspx</string>
    <string name="image_upload_url">http://www.ceyins.lk/vip/uploadImages.php</string>

</resources>
