<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/idName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/user_reg_name"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/address"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/idNic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/user_reg_nic"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/contactNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/contact_number"
            android:textSize="16sp"
            android:inputType="phone"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/conpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/user_confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/policyNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/policy_number"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/AppButton"
        android:text="@string/submit"/>





</LinearLayout>