<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/selectTextview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            style="@style/AppTextView"
            android:gravity="center_vertical"
            android:text="@string/select_registration_type"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:id="@+id/spinnerArrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/spinner_color"
            android:padding="@dimen/standard_space"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/vehicleNoTextview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/vehicle_number"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/companyName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/company_name"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/contactNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/contact_number"
            android:textSize="16sp"
            android:inputType="phone"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/address"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/regNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/business_reg_no"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/chassisNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/chassis_number"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/engineNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/engine_number"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/AppButton"
        android:text="@string/text_next"/>





</LinearLayout>