<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/yearTextview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            style="@style/AppTextView"
            android:gravity="center_vertical"
            android:text="@string/year_of_make"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:id="@+id/imgYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/spinner_color"
            android:padding="@dimen/standard_space"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/branch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/preferred_branch"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppEditText"
            android:gravity="center_vertical"
            android:hint="@string/location"
            android:textSize="16sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/makeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            style="@style/AppTextView"
            android:gravity="center_vertical"
            android:text="@string/make"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:id="@+id/imgMake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/spinner_color"
            android:padding="@dimen/standard_space"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/modelTextview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            style="@style/AppTextView"
            android:gravity="center_vertical"
            android:text="@string/model"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:id="@+id/imgModel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/spinner_color"
            android:padding="@dimen/standard_space"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="1">


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_space" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/AppButton"
        android:text="@string/submit"/>





</LinearLayout>